# Oxide

./: LICENSE  README.md  cargo.toml
cargo_cd/: Cargo.toml
cargo_ci/: Cargo.toml  build.rs
cargo_ci/proto/: cargo_ci.proto
cargo_ci/src/: config.rs  grpc.rs  main.rs  repo.rs  server.rs  utils.rs
oxide/: Cargo.toml  build.rs  oxide_data.json
oxide/proto/: cargo_ci.proto
oxide/src/: grpc_client.rs  main.rs  onboarding.rs  storage.rs  utils.rs
