[package]
name = "oxide"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo_ci = { path = "../cargo_ci" }
cargo_cd = { path = "../cargo_cd" }
actix-web = { version = "4.9.0", features = ["actix-tls", "openssl"] }
aes-gcm-siv = "0.11.1"
chrono = "0.4.38"
clap = "4.5.21"
git2 = "0.19.0"
prost = { version = "0.13.3", features = ["prost-derive"] }
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["json"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sodiumoxide = "0.2.7"
tokio = { version = "1.41.1", features = ["full"] }
tonic = "0.12.3"
tonic-reflection = "0.12.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.11.0", features = ["v4"] }
colored = "2.1.0"
anyhow = "1.0.93"


[build-dependencies]
tonic-build = "0.12.3"